--- a/ROMHacks/PokémonQuartz/Pokédex/Template.html
+++ b/ROMHacks/PokémonQuartz/Pokédex/Template.html
@@ -267,8 +267,8 @@
 										EV Yield
 									</th>
 									<td>
-										<p class="Attack">2 Attack</p>
-										<p class="Defense">1 Defense</p>
+										<p class="type attack">2 Attack</p>
+										<p class="type defense">1 Defense</p>
 										Unknown
 									</td>
 								</tr>
