--- a/ROMHacks/PokémonQuartz/Pokédex/Template.html
+++ b/ROMHacks/PokémonQuartz/Pokédex/Template.html
@@ -329,7 +329,7 @@
 										Regional #s
 									</th>
 									<td>
-										No. ??? <i>(Johto region)</i>
+										No. ??? <i>(Johto Pokédex)</i>
 									</td>
 								</tr>
 								<tr>
