--- a/ROMHacks/PokémonQuartz/Pokédex/Template.html
+++ b/ROMHacks/PokémonQuartz/Pokédex/Template.html
@@ -248,7 +248,7 @@
 								</tr>
 								<tr>
 									<th>
-										Initial Friendsship
+										Initial Friendship
 									</th>
 									<td>
 										Unknown
@@ -267,8 +267,8 @@
 										EV Yield
 									</th>
 									<td>
-										<p class="type attack">2 Attack</p>
-										<p class="type defense">1 Defense</p>
+										<p class="stat attack">2 Attack</p>
+										<p class="stat defense">1 Defense</p>
 										Unknown
 									</td>
 								</tr>
