--- a/navbar.html
+++ b/navbar.html
@@ -1,5 +1,5 @@
 <h1 class="barheader">Main</h1>
-	<ul>
+	<ul class="navlist">
 		<li><a href="https://fakemonlibrary.org">Home</a></li>
 		<li><a href=#>Pokédex</a></li>
 		<li><a href=#>Lost Pokémon</a></li>
@@ -9,7 +9,7 @@
 		<li><a href=#>Leaks</a></li>
 	</ul>
 <h1 class="barheader"><a href="/ROMHacks/index.html">ROM Hacks</a></h1>
-	<ul>
+	<ul class="navlist">
 		<li><a href="/ROMHacks/PokémonQuartz/index.html">Quartz</a></li>
 		<li><a href=#>Marble</a></li>
 		<li><a href=#>Topaz</a></li>
@@ -37,7 +37,7 @@
 		<li><a href=#>Ultimate Fusion</a></li>
 	</ul>
 <h1 class="barheader">Fan Games</h1>
-	<ul>
+	<ul class="navlist">
 		<li><a href=#>Uranium</a></li>
 		<li><a href=#>Azurite</a></li>
 		<li><a href=#>Jade</a></li>
@@ -76,7 +76,7 @@
 		<li><a href=#>Infinite Fusion</a></li>
 	</ul>
 <h1 class="barheader">Galleries</h1>
-	<ul>
+	<ul class="navlist">
 		<li><a href=#>Havai</a></li>
 		<li><a href=#>Zenev</a></li>
 		<li><a href=#>Ohron</a></li>
@@ -90,7 +90,7 @@
 		<li><a href=#>Taino</a></li>
 	</ul>
 <h1 class="barheader">Other</h1>
-	<ul>
+	<ul class="navlist">
 		<li><a href=#>Smogon CAP</a></li>
 		<li><a href=#>PokéFarm Q</a></li>
 		<li><a href=#>Amethyst</a></li>
