--- a/sidebar.html
+++ b/sidebar.html
@@ -11,7 +11,7 @@
 <img src="/ROMHacks/PokémonQuartz/Title.png" class="sideimg centered"></img>
 <p class="bartext centered">Aug 28, 2022</p>
 <h1 class="barheader">Recently Updated</h1>
-<ul>
+<ul class="navlist">
 	<li><a href="/ROMHacks/PokémonQuartz.html">Pokémon Quartz</a></li>
 	<li><a href="/ROMHacks/PokémonTopaz.html">Pokémon Topaz</a></li>
 	<li><a href=#>New Fakemon</a></li>
@@ -21,7 +21,7 @@
 	<li><a href=#>New Pokémon Forms</a></li>
 </ul>
 <h1 class="barheader">Cool Sites</h1>
-<ul>
+<ul class="navlist">
 	<li><a href=#>Pokémon Factory</a></li>
 	<li><a href=#>RageCandyBar</a></li>
 	<li><a href=#>Bulbapedia</a></li>
