--- a/ROMHacks/PokémonQuartz/sidebar.html
+++ b/ROMHacks/PokémonQuartz/sidebar.html
@@ -2,7 +2,7 @@
 <a href="/ROMHacks/PokémonQuartz/index.html"><img src="/ROMHacks/PokémonQuartz/Title.png" class="sideimg centered"></img></a>
 <p class="bartext centered">&copy; Baro, 2006</p>
 <h1 class="barheader">Pokémon</h1>
-<ul>
+<ul class="navlist">
 	<li><a href="/ROMHacks/PokémonQuartz/Pokédex.html">Pokédex</a></li>
 	<li><a href="/ROMHacks/PokémonQuartz/Gallery.html">Gallery</a></li>
 	<li><a href=#>New Fakemon</a></li>
@@ -12,7 +12,7 @@
 	<li><a href=#>New Pokémon Forms</a></li>
 </ul>
 <h1 class="barheader">Other Info</h1>
-<ul>
+<ul class="navlist">
 	<li><a href=#>Story & Characters</a></li>
 	<li><a href=#>PokéNav</a></li>
 	<li><a href=#>Item Compendium</a></li>
