--- a/ROMHacks/PokémonQuartz/Pokédex/Template.html
+++ b/ROMHacks/PokémonQuartz/Pokédex/Template.html
@@ -163,6 +163,9 @@
 										<i>1.</i> Unknown<br>
 										<i>2.</i> Unknown<br>
 										<i>H.</i> Unknown<br>
+										<i>1.</i> <span class="nkdf">Unknown</span><br>
+										<i>2.</i> <span class="nkdf">Unknown</span><br>
+										<i>H.</i> <span class="nkdf">Unknown</span>
 									</td>
 								</tr>
 							</table>
@@ -185,7 +188,7 @@
 									</th>
 									<td class="dexh">
 										<span class="male">12.5% Male</span>, <span class="female">87.5% Female</span>
-										Unknown
+										<span class="nkdf">Unknown</span>
 									</td>
 								</tr>
 								<tr>
@@ -194,6 +197,7 @@
 									</th>
 									<td>
 										Mineral
+										<span class="nkdf">Unknown</span>
 									</td>
 								</tr>
 								<tr>
@@ -202,6 +206,7 @@
 									</th>
 									<td>
 										??? cycles <i>(~??? steps)</i>
+										<span class="nkdf">Unknown</span>
 									</td>
 								</tr>
 								<tr>
@@ -211,7 +216,7 @@
 									<td>
 										Volbeat <i>(50%)</i><br>
 										Munchlax <i>(Lax Incense)</i>
-										Unknown
+										<span class="nkdf">Unknown</span>
 									</td>
 								</tr>
 							</table>
@@ -235,7 +240,7 @@
 									<td class="dexh">
 										<img src="../Footprints/Chapebaya.png" class="icon">
 										N/A
-										Unknown
+										<span class="nkdf">Unknown</span>
 									</td>
 								</tr>
 								<tr>
@@ -243,7 +248,7 @@
 										Catch Rate
 									</th>
 									<td>
-										Unknown
+										<span class="nkdf">???</span>
 									</td>
 								</tr>
 								<tr>
@@ -251,7 +256,7 @@
 										Initial Friendship
 									</th>
 									<td>
-										Unknown
+										<span class="nkdf">???</span>
 									</td>
 								</tr>
 								<tr>
@@ -259,7 +264,7 @@
 										Exp Points
 									</th>
 									<td>
-										Unknown
+										<span class="nkdf">???</span>
 									</td>
 								</tr>
 								<tr>
@@ -269,7 +274,7 @@
 									<td>
 										<p class="stat attack">2 Attack</p>
 										<p class="stat defense">1 Defense</p>
-										Unknown
+										<span class="nkdf">Unknown</span>
 									</td>
 								</tr>
 								<tr>
@@ -277,7 +282,7 @@
 										Level Curve
 									</th>
 									<td>
-										Unknown <i>(???)</i>
+										<span class="nkdf">Unknown (???)</span>
 									</td>
 								</tr>
 							</table>
