--- a/ROMHacks/PokémonQuartz/Pokédex/Template.html
+++ b/ROMHacks/PokémonQuartz/Pokédex/Template.html
@@ -144,7 +144,7 @@
 										Height
 									</th>
 									<td>
-										????.? m <i>(??'??'')</i>
+										<span class="nkdf">????.? m (??'??'')</span>
 									</td>
 								</tr>
 								<tr>
@@ -152,7 +152,7 @@
 										Weight
 									</th>
 									<td>
-										????.? kg <i>(????.? lb)</i>
+										<span class="nkdf">????.? kg (????.? lb)</span>
 									</td>
 								</tr>
 								<tr>
@@ -205,7 +205,7 @@
 										Hatch Time
 									</th>
 									<td>
-										??? cycles <i>(~??? steps)</i>
+										??? cycles (~??? steps)
 										<span class="nkdf">Unknown</span>
 									</td>
 								</tr>
