--- a/ROMHacks/PokémonQuartz/Pokédex/Template.html
+++ b/ROMHacks/PokémonQuartz/Pokédex/Template.html
@@ -214,8 +214,8 @@
 										Offspring
 									</th>
 									<td>
-										Volbeat <i>(50%)</i><br>
-										Munchlax <i>(Lax Incense)</i>
+										Volbeat (50%)<br>
+										Munchlax (Lax Incense)
 										<span class="nkdf">Unknown</span>
 									</td>
 								</tr>
@@ -304,7 +304,8 @@
 										Main Color
 									</th>
 									<td class="dexh">
-										<span class="COLOR">Unknown</span>
+										<p class="color red">Red</p>
+										<span class="nkdf">Unknown</span>
 									</td>
 								</tr>
 								<tr>
