--- a/ROMHacks/PokémonQuartz/Pokédex/Template.html
+++ b/ROMHacks/PokémonQuartz/Pokédex/Template.html
@@ -327,7 +327,7 @@
 										<img src="/Resources/Body12.png" title="Single Pair of Wings" class="icon shape">
 										<img src="/Resources/Body13.png" title="Serpent-like" class="icon shape">
 										<img src="/Resources/Body14.png" title="Head and Arms" class="icon shape">
-										Unknown
+										<span class="nkdf">Unknown</span>
 									</td>
 								</tr>
 								<tr>
@@ -335,7 +335,9 @@
 										Regional #s
 									</th>
 									<td>
-										No. ??? <i>(Johto Pokédex)</i>
+										No. 000 (Johto Pokédex)
+										N/A
+										<span class="nkdf">Unknown</span>
 									</td>
 								</tr>
 								<tr>
@@ -343,7 +345,7 @@
 										Habitat
 									</th>
 									<td>
-										Unknown
+										<span class="nkdf">Unknown</span>
 									</td>
 								</tr>
 							</table>
@@ -365,13 +367,13 @@
 										HP
 									</th>
 									<td class="col25 hp">
-										???
+										<span class="nkdf">???</span>
 									</td>
 									<th class="col25 spatk">
 										Sp. Atk
 									</th>
 									<td class="col25 spatk">
-										???
+										<span class="nkdf">???</span>
 									</td>
 								</tr>
 								<tr>
@@ -379,13 +381,13 @@
 										Attack
 									</th>
 									<td class="attack">
-										???
+										<span class="nkdf">???</span>
 									</td>
 									<th class="spdef">
 										Sp. Def
 									</th>
 									<td class="spdef">
-										???
+										<span class="nkdf">???</span>
 									</td>
 								</tr>
 								<tr>
@@ -393,18 +395,18 @@
 										Defense
 									</th>
 									<td class="defense">
-										???
+										<span class="nkdf">???</span>
 									</td>
 									<th class="speed">
 										Speed
 									</th>
 									<td class="speed">
-										???
+										<span class="nkdf">???</span>
 									</td>
 								</tr>
 								<tr>
 									<td colspan=4 class="total">
-										<b>Total:</b> ???
+										<b>Total:</b> <span class="nkdf">???</span>
 									</td>
 								</tr>
 							</table>
