--- a/ROMHacks/PokémonQuartz/Pokédex/Template.html
+++ b/ROMHacks/PokémonQuartz/Pokédex/Template.html
@@ -478,7 +478,7 @@
 								</tr>
 								<tr>
 									<td class="dexpage">
-										This is a newly discovered Pokémon. It is currently under investigation. No additional information is available at this time.
+										<span class="nkdf">This is a newly discovered Pokémon. It is currently under investigation. No additional information is available at this time.</span>
 									</td>
 								</tr>
 							</table>
@@ -530,11 +530,11 @@
 								<tr>
 									<td>
 										100%
-										???
+										<span class="nkdf">???%</span>
 									</td>
 									<td>
 										Nothing
-										Unknown
+										<span class="nkdf">Unknown</span>
 									</td>
 								</tr>
 							</table>
