--- a/ROMHacks/PokémonQuartz/Pokédex/Template.html
+++ b/ROMHacks/PokémonQuartz/Pokédex/Template.html
@@ -215,7 +215,8 @@
 									</th>
 									<td>
 										Volbeat (50%)<br>
-										Munchlax (Lax Incense)
+										Munchlax (Lax Incense)<br>
+										Can't Breed
 										<span class="nkdf">Unknown</span>
 									</td>
 								</tr>
@@ -1153,15 +1154,15 @@
 										Ancient Power
 									</td>
 									<td>
-										Aerodactyl, Togetic, Archen, Archeops
+										Aerodactyl, Togetic, Togekiss, Archen, Archeops
 									</td>
 								</tr>
 								<tr>
 									<td>
-										Steel Wing
+										Roost
 									</td>
 									<td>
-										Skarmory
+										Hoothoot, Noctowl, Wingull, Pelipper, Pidove, Tranquill, Fletchling, Fletchinder, Talonflame, Hawlucha, Noibat, Noivern
 									</td>
 								</tr>
 								<tr>
